Added further CSS and HTML to future forecast
Added main icon to page, border shadow, and icons to future forecast. Added additional HTML for future forecast.

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ h1 {
 .weather-app {
   border: 2px solid black;
   border-radius: 20px;
+  box-shadow: 3px 3px 3px darkslategrey;
 }
 .top-header {
   text-align: center;
@@ -41,7 +42,14 @@ h1 {
 }
 
 .future-forecast-container {
-  border-top: 1px solid black;
+  border-top: 1px solid #c1f0f0;
   margin-top: 5px;
   padding: 5px;
+  background-color: #eafafa;
+  border-bottom-left-radius: 18px;
+  border-bottom-right-radius: 18px;
+}
+img {
+  display: block;
+  margin: 0 auto;
 }
