Added IMG and :hover

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,12 @@ h1 {
   text-align: center;
   margin-top: 20px;
 }
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+
 .weather-app-wrapper {
   max-width: 600px;
   display: block;
@@ -44,12 +50,20 @@ h1 {
 .future-forecast-container {
   border-top: 1px solid #c1f0f0;
   margin-top: 5px;
-  padding: 5px;
   background-color: #eafafa;
   border-bottom-left-radius: 18px;
   border-bottom-right-radius: 18px;
 }
-img {
-  display: block;
-  margin: 0 auto;
+
+.col {
+}
+
+.col:hover {
+  background-color: #196767;
+}
+
+.fa-sun {
+  font-size: 35px;
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
